--- a/login.html
+++ b/login.html
@@ -262,7 +262,7 @@
 						}, 50);
 					}, false);
 					regButton.addEventListener('tap', function(event) {
-						$.toast('请联系咨询部');
+						$.toast('暂未开放注册功能，请联系咨询部');
 						return;
 						$.openWindow({
 							url: 'reg.html',
