--- a/biaodanluru.html
+++ b/biaodanluru.html
@@ -338,20 +338,18 @@
 		<script src="js/mui.min.js"></script>
 		<script src="js/app.js"></script>
 		<script>
+			// 用户状态
+			var state = app.getState();
+			account.innerText = state.account;
+			if(state.account == null || state.account == undefined || state.account == '' )
+			{
+				mui.openWindow('login.html');
+			}
+			
 			(function($, doc) {
 				$.init();
 				var settings = app.getSettings();
 				var account = doc.getElementById('account');
-				//
-				window.addEventListener('show', function() {
-					var state = app.getState();
-					account.innerText = state.account;
-					
-					if(state.account == null || state.account == undefined || state.account == '' )
-					{
-						mui.openWindow('login.html');
-					}
-				}, false);
 				
 				document.querySelectorAll("nav a").forEach(function(el){
 					el.addEventListener('tap',function(){
