修改 压合 检验

--- a/yahe/jianyan.html
+++ b/yahe/jianyan.html
@@ -290,7 +290,7 @@
 				// 登录状态消息
 				var state = app.getState();
 				document.getElementById("factoryName").value = state.changbie;
-				document.getElementById("inspector").value = state.username;
+				document.getElementById("operator").value = state.username;
 
 				// 表单
 				document.getElementById("submit").addEventListener('tap', function() {
