--- a/waixing/shike.html
+++ b/waixing/shike.html
@@ -29,7 +29,7 @@
 		<div class="mui-content" id="">
 
 			<div id="hcaption">
-				外形蚀刻检验
+				外层蚀刻检验
 			</div>
 			<ul class="mui-list-unstyled mui-table-view biaodan" style="margin-top: 0;">
 				<li class="mui-table-view-cell mui-collapse mui-active" style="color: cadetblue;text-align: left;padding: 0.5rem 1rem;">
