--- a/biaodanluru.html
+++ b/biaodanluru.html
@@ -44,6 +44,82 @@
 			</div>
 			<div class="" style="padding-top: 5px;">
 				 <ul class="mui-table-view"> 
+				 <li class="mui-table-view-cell mui-collapse">
+				 	<a class="mui-navigate-right" href="#">品质</a>
+				 	<div class="mui-collapse-content">
+				 		<ul class="mui-table-view">
+				 			<li class="mui-table-view-cell pro" id="pinzhi_kongtongceliang">
+				 				<a class="mui-navigate-right">孔铜测量</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_dutongqiepian">
+				 				<a class="mui-navigate-right">镀铜切片</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_neicengxkxj">
+				 				<a class="mui-navigate-right">内层线宽线距</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="waixing_shike">
+				 				<a class="mui-navigate-right">外层蚀刻检验</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_waicengxkxj">
+				 				<a class="mui-navigate-right">外层线宽线距</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_shikehoukongjing">
+				 				<a class="mui-navigate-right">蚀刻后孔径</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_zuhanhoudu">
+				 				<a class="mui-navigate-right">阻焊厚度</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_lvyoushoujian">
+				 				<a class="mui-navigate-right">绿油首检</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_zifushoujian">
+				 				<a class="mui-navigate-right">字符首检</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_chenjinshoujian">
+				 				<a class="mui-navigate-right">沉金首检</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_penxishoujian">
+				 				<a class="mui-navigate-right">喷锡首检</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_fuzhuoliceshi">
+				 				<a class="mui-navigate-right">附着力测试</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_AVI">
+				 				<a class="mui-navigate-right">AVI日报</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_banqiaoqu">
+				 				<a class="mui-navigate-right">板翘曲检查</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_zhongjianxiuban">
+				 				<a class="mui-navigate-right">终检修板</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="zuankong_shoujian">
+				 				<a class="mui-navigate-right">钻孔首检</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="zuankong_choujian">
+				 				<a class="mui-navigate-right">钻孔抽检</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="pinzhi_zuankongXRAY">
+				 				<a class="mui-navigate-right">钻孔底板xray</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="yahe_jianyan">
+				 				<a class="mui-navigate-right">压合检验</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="yahe_banhou">
+				 				<a class="mui-navigate-right">压合板厚</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="yahe_qiepian">
+				 				<a class="mui-navigate-right">压合切片</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="tudu_zhuzhuangjing">
+				 				<a class="mui-navigate-right">镀铜柱状晶</a>
+				 			</li>
+				 			<li class="mui-table-view-cell pro" id="wulishi_beiguang">
+				 				<a class="mui-navigate-right">背光测试</a>
+				 			</li>
+				 		</ul>
+				 	</div>
+				 </li>
 					<li class="mui-table-view-cell mui-collapse">
 						<a class="mui-navigate-right" href="#">开料</a>
 						<div class="mui-collapse-content">
@@ -86,15 +162,6 @@
 								<li class="mui-table-view-cell pro" id="yahe_ronghe">
 									<a class="mui-navigate-right">压合熔合</a>
 								</li>
-								<li class="mui-table-view-cell pro" id="yahe_jianyan">
-									<a class="mui-navigate-right">压合检验</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="yahe_banhou">
-									<a class="mui-navigate-right">压合板厚</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="yahe_qiepian">
-									<a class="mui-navigate-right">压合切片</a>
-								</li>
 								<li class="mui-table-view-cell pro" id="yahe_xray">
 									<a class="mui-navigate-right">X-RAY钻靶</a>
 								</li>
@@ -103,22 +170,6 @@
 								</li>
 								<li class="mui-table-view-cell pro" id="yahe_zonghuafangong">
 									<a class="mui-navigate-right">粽化返工</a>
-								</li>
-							</ul>
-						</div>
-					</li>
-					<li class="mui-table-view-cell mui-collapse">
-						<a class="mui-navigate-right" href="#">钻孔</a>
-						<div class="mui-collapse-content">
-							<ul class="mui-table-view">
-								<li class="mui-table-view-cell pro" id="zuankong_zuanzhuicaodao">
-									<a class="mui-navigate-right">钻咀槽刀发放</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="zuankong_shoujian">
-									<a class="mui-navigate-right">钻孔首检</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="zuankong_choujian">
-									<a class="mui-navigate-right">钻孔抽检</a>
 								</li>
 							</ul>
 						</div>
@@ -162,16 +213,6 @@
 						</div>
 					</li>
 					<li class="mui-table-view-cell mui-collapse">
-						<a class="mui-navigate-right" href="#">物理室</a>
-						<div class="mui-collapse-content">
-							<ul class="mui-table-view">
-								<li class="mui-table-view-cell pro" id="wulishi_beiguang">
-									<a class="mui-navigate-right">背光测试</a>
-								</li>
-							</ul>
-						</div>
-					</li>
-					<li class="mui-table-view-cell mui-collapse">
 						<a class="mui-navigate-right" href="#">电测</a>
 						<div class="mui-collapse-content">
 							<ul class="mui-table-view">
@@ -194,66 +235,11 @@
 						</div>
 					</li>
 					<li class="mui-table-view-cell mui-collapse">
-						<a class="mui-navigate-right" href="#">品质</a>
-						<div class="mui-collapse-content">
-							<ul class="mui-table-view">
-								<li class="mui-table-view-cell pro" id="pinzhi_kongtongceliang">
-									<a class="mui-navigate-right">孔铜测量</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_dutongqiepian">
-									<a class="mui-navigate-right">镀铜切片</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_neicengxkxj">
-									<a class="mui-navigate-right">内层线宽线距</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_waicengxkxj">
-									<a class="mui-navigate-right">外层线宽线距</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_shikehoukongjing">
-									<a class="mui-navigate-right">蚀刻后孔径</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_zuhanhoudu">
-									<a class="mui-navigate-right">阻焊厚度</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_lvyoushoujian">
-									<a class="mui-navigate-right">绿油首检</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_zifushoujian">
-									<a class="mui-navigate-right">字符首检</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_chenjinshoujian">
-									<a class="mui-navigate-right">沉金首检</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_penxishoujian">
-									<a class="mui-navigate-right">喷锡首检</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_fuzhuoliceshi">
-									<a class="mui-navigate-right">附着力测试</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_AVI">
-									<a class="mui-navigate-right">AVI日报</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_banqiaoqu">
-									<a class="mui-navigate-right">板翘曲检查</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_zhongjianxiuban">
-									<a class="mui-navigate-right">终检修板</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_zuankongXRAY">
-									<a class="mui-navigate-right">钻孔底板xray</a>
-								</li>
-							</ul>
-						</div>
-					</li>
-					<li class="mui-table-view-cell mui-collapse">
 						<a class="mui-navigate-right" href="#">图镀</a>
 						<div class="mui-collapse-content">
 							<ul class="mui-table-view">
 								<li class="mui-table-view-cell pro" id="tudu_shengchan">
 									<a class="mui-navigate-right">生产</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="tudu_zhuzhuangjing">
-									<a class="mui-navigate-right">镀铜柱状晶</a>
 								</li>
 							</ul>
 						</div>
@@ -323,11 +309,11 @@
 						</div>
 					</li>
 					<li class="mui-table-view-cell mui-collapse">
-						<a class="mui-navigate-right" href="#">外形</a>
+						<a class="mui-navigate-right" href="#">二级仓</a>
 						<div class="mui-collapse-content">
 							<ul class="mui-table-view">
-								<li class="mui-table-view-cell pro" id="waixing_shike">
-									<a class="mui-navigate-right">外层碱/酸性蚀刻</a>
+								<li class="mui-table-view-cell pro" id="zuankong_zuanzhuicaodao">
+									<a class="mui-navigate-right">钻咀槽刀发放</a>
 								</li>
 							</ul>
 						</div>
