--- a/pinzhi/banqiaoqu.html
+++ b/pinzhi/banqiaoqu.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -95,17 +96,22 @@
 							<span class="mui-col-xs-3">返压数量:</span>
 							<span class="mui-col-xs-9"><input id="repressureQty" type="text" value="" /></span>
 						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">返压确认:</span>
-							<span class="mui-col-xs-9">
-								<select id="repressureConfirm">
-									<option value="" selected="selected">请选择</option>
-									<option value="OK">OK</option>
-									<option value="NG">NG</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 8px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">返压确认:</label>
+									<span class="mui-badge1">
+										<select id="repressureConfirm" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="OK">OK</option>
+											<option value="NG">NG</option>
+										</select>
+									</span>
+								</div>
+							</div>
+
 						</p>
-						<p class="mui-row ">
+						<p class="mui-row" style="padding: 23px 0px 0px 0px;">
 							<span class="mui-col-xs-3">检查人:</span>
 							<span class="mui-col-xs-9"><input id="operator" type="text" value="" /></span>
 						</p>
@@ -130,6 +136,96 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				prodQty: document.getElementById("prodQty").value || '',
+				repressureQty: document.getElementById("repressureQty").value || '',
+				repressureConfirm: document.getElementById("repressureConfirm").value || '',
+				operator: document.getElementById("operator").value || '',
+			}
+			if (information.prodQty.length < 1 || information.repressureQty.length < 1 ||
+				information.repressureConfirm.length < 1 || information.operator.length < 1) {
+				var color = "#F9F900";
+				if (information.prodQty.length < 1)
+					$("#prodQty").css("background-color", color);
+				if (information.repressureQty.length < 1)
+					$("#repressureQty").css("background-color", color);
+				if (information.repressureConfirm.length < 1)
+					$("#repressureConfirm").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+
+				var decide;
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+
+				factoryName = facarr[document.getElementById("factoryName").value];
+				document.querySelectorAll("input[name='decide']").forEach(function(el) {
+					if (el.checked)
+						decide = el.value;
+				})
+				checkItem = document.getElementById("checkItem");
+				checkType = document.getElementById("checkType");
+
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					prodQty: document.getElementById("prodQty").value,
+					repressureQty: document.getElementById("repressureQty").value,
+					repressureConfirm: repressureConfirm.options[repressureConfirm.selectedIndex].value,
+
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=68',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -330,74 +426,6 @@
 				// 	el.addEventListener('change',cal)
 				// })
 
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-
-					var decide;
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-					checkItem = document.getElementById("checkItem");
-					checkType = document.getElementById("checkType");
-
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						prodQty: document.getElementById("prodQty").value,
-						repressureQty: document.getElementById("repressureQty").value,
-						repressureConfirm: repressureConfirm.options[repressureConfirm.selectedIndex].value,
-
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=68',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
