--- a/pinzhi/dutongqiepian.html
+++ b/pinzhi/dutongqiepian.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -95,28 +96,36 @@
 							<span class="mui-col-xs-3">规格:</span>
 							<span class="mui-col-xs-9"><input id="prodSpec" type="text" value="" /></span>
 						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">项目:</span>
-							<span class="mui-col-xs-9">
-								<select id="checkItem">
-									<option value="" selected="selected">请选择</option>
-									<option value="面铜">面铜</option>
-									<option value="孔铜">孔铜</option>
-									<option value="孔粗">孔粗</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 8px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">项目:</label>
+									<span class="mui-badge1">
+										<select id="checkItem" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="面铜">面铜</option>
+											<option value="孔铜">孔铜</option>
+											<option value="孔粗">孔粗</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">检测类型:</span>
-							<span class="mui-col-xs-9">
-								<select id="checkType">
-									<option value="" selected="selected">请选择</option>
-									<option value="首件">首件</option>
-									<option value="批量">批量</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 31px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">检测类型:</label>
+									<span class="mui-badge1">
+										<select id="checkType" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="首件">首件</option>
+											<option value="批量">批量</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row shiceshuju">
+						<p class="mui-row shiceshuju" style="padding:9px 0px 0px 0px;">
 							<span class="mui-col-xs-12" style="line-height: 52px;padding-left: 1rem;">测量数据</span>
 						</p>
 						<p class="mui-row shiceshuju">
@@ -146,7 +155,7 @@
 						<p class="mui-row shiceshuju">
 							<span class="mui-col-xs-3">判定结果:</span>
 							<span class="mui-col-xs-9 hradio">
-								<label>ACC</label><input name="decide" value="ACCEPT" type="radio">
+								<label>ACC</label><input name="decide" value="ACCEPT" type="radio" checked="checked">
 								<label>REJ</label><input name="decide" value="REJECT" type="radio">
 							</span>
 						</p>
@@ -176,6 +185,134 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				prodQty: document.getElementById("prodQty").value || '',
+				prodSpec: document.getElementById("prodSpec").value || '',
+				checkItem: checkItem.options[checkItem.selectedIndex].value || '',
+				checkType: checkType.options[checkType.selectedIndex].value || '',
+				decide: document.querySelector("input[name='decide'][checked='checked']").value || '',
+				measurea: document.getElementById("measurea").value || '',
+				measureb: document.getElementById("measureb").value || '',
+				measurec: document.getElementById("measurec").value || '',
+				measured: document.getElementById("measured").value || '',
+				measuree: document.getElementById("measuree").value || '',
+				measuref: document.getElementById("measuref").value || '',
+				operator: document.getElementById("operator").value || '',
+				//auditor: document.getElementById("auditor").value,
+
+			}
+			if (information.prodQty.length < 1 || information.prodSpec.length < 1 ||
+				information.checkItem.length < 1 || information.measureb.length < 1 ||
+				information.measurea.length < 1 || information.measured.length < 1 ||
+				information.measurec.length < 1 || information.checkType.length < 1 ||
+				information.measuree.length < 1 || information.measuref.length < 1 ||
+				information.operator.length < 1 || information.decide.length < 1) {
+				var color = "#F9F900";
+				if (information.prodQty.length < 1)
+					$("#prodQty").css("background-color", color);
+				if (information.prodSpec.length < 1)
+					$("#prodSpec").css("background-color", color);
+				if (information.checkItem.length < 1)
+					$("#checkItem").css("background-color", color);
+				if (information.measureb.length < 1)
+					$("#measureb").css("background-color", color);
+				if (information.measurea.length < 1)
+					$("#measurea").css("background-color", color);
+				if (information.measured.length < 1)
+					$("#measured").css("background-color", color);
+				if (information.measurec.length < 1)
+					$("#measurec").css("background-color", color);
+				if (information.measuree.length < 1)
+					$("#measuree").css("background-color", color);
+				if (information.checkType.length < 1)
+					$("#checkType").css("background-color", color);
+				if (information.measuref.length < 1)
+					$("#measuref").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				if (information.decide.length < 1)
+					$("#decide").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+
+				var decide;
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+
+				factoryName = facarr[document.getElementById("factoryName").value];
+				document.querySelectorAll("input[name='decide']").forEach(function(el) {
+					if (el.checked)
+						decide = el.value;
+				})
+				checkItem = document.getElementById("checkItem");
+				checkType = document.getElementById("checkType");
+
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					prodQty: document.getElementById("prodQty").value,
+					prodSpec: document.getElementById("prodSpec").value,
+					checkItem: checkItem.options[checkItem.selectedIndex].value,
+					checkType: checkType.options[checkType.selectedIndex].value,
+
+					decide: decide,
+					measurea: document.getElementById("measurea").value,
+					measureb: document.getElementById("measureb").value,
+					measurec: document.getElementById("measurec").value,
+					measured: document.getElementById("measured").value,
+					measuree: document.getElementById("measuree").value,
+					measuref: document.getElementById("measuref").value,
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=34',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -366,8 +503,9 @@
 
 					document.getElementById("minCopperThick").value = (minCopperThick == 999) ? 0 : minCopperThick;
 					document.getElementById("maxCopperThick").value = (maxCopperThick == -999) ? 0 : maxCopperThick;
-					document.getElementById("maxMinusRequire").value = document.getElementById("minCopperThick").value - document.getElementById(
-						"copperThickRequire").value;
+					document.getElementById("maxMinusRequire").value = document.getElementById("minCopperThick").value - document
+						.getElementById(
+							"copperThickRequire").value;
 					document.getElementById("maxMinusMin").value = document.getElementById("maxCopperThick").value - document.getElementById(
 						"minCopperThick").value;
 				}
@@ -376,82 +514,7 @@
 				// 	el.addEventListener('change',cal)
 				// })
 
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
 
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-
-					var decide;
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-					checkItem = document.getElementById("checkItem");
-					checkType = document.getElementById("checkType");
-
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						prodQty: document.getElementById("prodQty").value,
-						prodSpec: document.getElementById("prodSpec").value,
-						checkItem: checkItem.options[checkItem.selectedIndex].value,
-						checkType: checkType.options[checkType.selectedIndex].value,
-
-						decide: decide,
-						measurea: document.getElementById("measurea").value,
-						measureb: document.getElementById("measureb").value,
-						measurec: document.getElementById("measurec").value,
-						measured: document.getElementById("measured").value,
-						measuree: document.getElementById("measuree").value,
-						measuref: document.getElementById("measuref").value,
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=34',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
