--- a/pinzhi/neicengxkxj.html
+++ b/pinzhi/neicengxkxj.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
@@ -124,7 +125,7 @@
 						<p class="mui-row shiceshuju">
 							<span class="mui-col-xs-3">判定结果:</span>
 							<span class="mui-col-xs-9 hradio">
-								<label>ACC</label><input name="decide" value="ACCEPT" type="radio">
+								<label>ACC</label><input name="decide" value="ACCEPT" type="radio" checked="checked">
 								<label>REJ</label><input name="decide" value="REJECT" type="radio">
 							</span>
 						</p>
@@ -175,6 +176,136 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				prodQty: document.getElementById("prodQty").value || '',
+				pcbLayerNo: document.getElementById("pcbLayerNo").value || '',
+				lineWidth: document.getElementById("lineWidth").value || '',
+				lineWidthValue: document.getElementById("lineWidthValue").value || '',
+				lineWidthRange: document.getElementById("lineWidthRange").value || '',
+				lineDistance: document.getElementById("lineDistance").value || '',
+				lineDistanceRange: document.getElementById("lineDistanceRange").value || '',
+				lineDistanceValue: document.getElementById("lineDistanceValue").value || '',
+				//decide: decide,
+				//rejectitem: rejectitem,
+				operator: document.getElementById("operator").value || '',
+			}
+			if (information.prodQty.length < 1 || information.pcbLayerNo.length < 1 ||
+				information.lineWidth.length < 1 || information.lineWidthValue.length < 1 ||
+				information.lineWidthRange.length < 1 || information.lineDistance.length < 1 ||
+				information.lineDistanceRange.length < 1 || information.lineDistanceValue.length < 1 ||
+				information.operator.length < 1) {
+				var color = "#F9F900";
+				if (information.prodQty.length < 1)
+					$("#prodQty").css("background-color", color);
+				if (information.pcbLayerNo.length < 1)
+					$("#pcbLayerNo").css("background-color", color);
+				if (information.lineWidth.length < 1)
+					$("#lineWidth").css("background-color", color);
+				if (information.lineWidthValue.length < 1)
+					$("#lineWidthValue").css("background-color", color);
+				if (information.lineWidthRange.length < 1)
+					$("#lineWidthRange").css("background-color", color);
+				if (information.lineDistance.length < 1)
+					$("#lineDistance").css("background-color", color);
+				if (information.lineDistanceRange.length < 1)
+					$("#lineDistanceRange").css("background-color", color);
+				if (information.lineDistanceValue.length < 1)
+					$("#lineDistanceValue").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+				var iscopper;
+				var speccut;
+				var decide;
+				var rejectitem = [];
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+				factoryName = facarr[document.getElementById("factoryName").value];
+				document.querySelectorAll("input[name='decide']").forEach(function(el) {
+					if (el.checked)
+						decide = el.value;
+				})
+				document.querySelectorAll("input[name='rejectitem']").forEach(function(el) {
+					if (el.checked)
+						rejectitem.push(el.value);
+				})
+
+
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					prodQty: document.getElementById("prodQty").value,
+					pcbLayerNo: document.getElementById("pcbLayerNo").value,
+					lineWidth: document.getElementById("lineWidth").value,
+					lineWidthValue: document.getElementById("lineWidthValue").value,
+					lineWidthRange: document.getElementById("lineWidthRange").value,
+					lineDistance: document.getElementById("lineDistance").value,
+					lineDistanceRange: document.getElementById("lineDistanceRange").value,
+					lineDistanceValue: document.getElementById("lineDistanceValue").value,
+
+					decide: decide,
+					rejectitem: rejectitem,
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				// for(var key in data){
+				// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
+				// 		mui.alert("必填项不能为空");
+				// 		return;
+				// 	}
+				// }
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=27',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: true,
+						rejectItem: rejectitem.toString()
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
+
 		(function($, doc) {
 			//初始化 scan页
 			$.init({
@@ -354,93 +485,6 @@
 				}
 				// document.getElementById("checkTime").addEventListener('tap',pickerf);
 
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-					var iscopper;
-					var speccut;
-					var decide;
-					var rejectitem = [];
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-					document.querySelectorAll("input[name='rejectitem']").forEach(function(el) {
-						if (el.checked)
-							rejectitem.push(el.value);
-					})
-
-
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						prodQty: document.getElementById("prodQty").value,
-						pcbLayerNo: document.getElementById("pcbLayerNo").value,
-						lineWidth: document.getElementById("lineWidth").value,
-						lineWidthValue: document.getElementById("lineWidthValue").value,
-						lineWidthRange: document.getElementById("lineWidthRange").value,
-						lineDistance: document.getElementById("lineDistance").value,
-						lineDistanceRange: document.getElementById("lineDistanceRange").value,
-						lineDistanceValue: document.getElementById("lineDistanceValue").value,
-
-						decide: decide,
-						rejectitem: rejectitem,
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					// for(var key in data){
-					// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
-					// 		mui.alert("必填项不能为空");
-					// 		return;
-					// 	}
-					// }
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=27',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: true,
-							rejectItem: rejectitem.toString()
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
