--- a/pinzhi/penxishoujian.html
+++ b/pinzhi/penxishoujian.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -103,58 +104,79 @@
 							<span class="mui-col-xs-3">实测:</span>
 							<span class="mui-col-xs-9"><input id="measureData" type="text" value="" /></span>
 						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">判定:</span>
-							<span class="mui-col-xs-9">
-								<select id="decide">
-									<option value="" selected="selected">请选择</option>
-									<option value="ACCEPT">ACC</option>
-									<option value="REJECT">REJ</option>
-								</select>
-							</span>
-						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">附着力测试:</span>
-							<span class="mui-col-xs-9">
-								<select id="adhesionTest">
-									<option value="" selected="selected">请选择</option>
-									<option value="OK">OK</option>
-									<option value="NG">NG</option>
-								</select>
-							</span>
-						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">有无压接孔:</span>
-							<span class="mui-col-xs-9">
-								<select id="isPorePressure">
-									<option value="" selected="selected">请选择</option>
-									<option value="无">无</option>
-									<option value="有">有</option>
-								</select>
-							</span>
-						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">外观判定:</span>
-							<span class="mui-col-xs-9">
-								<select id="facadeCheck">
-									<option value="" selected="selected">请选择</option>
-									<option value="ACCEPT">ACC</option>
-									<option value="REJECT">REJ</option>
-								</select>
-							</span>
-						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">最终判定:</span>
-							<span class="mui-col-xs-9">
-								<select id="finalDecide">
-									<option value="" selected="selected">请选择</option>
-									<option value="ACCEPT">ACC</option>
-									<option value="REJECT">REJ</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 8px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">判定:</label>
+									<span class="mui-badge1">
+										<select id="decide" style="margin:auto; color:#8F8F94; font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="ACCEPT">ACC</option>
+											<option value="REJECT">REJ</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
 
-						<p class="mui-row ">
+						<p class="mui-row shiceshuju" style="padding: 31px 0px 0px 0px ;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">附着力测试:</label>
+									<span class="mui-badge1">
+										<select id="adhesionTest" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="OK">OK</option>
+											<option value="NG">NG</option>
+										</select>
+									</span>
+								</div>
+							</div>
+						</p>
+						<p class="mui-row shiceshuju" style="padding: 31px 0px 0px 0px ;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">有无压接孔:</label>
+									<span class="mui-badge1">
+										<select id="isPorePressure" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="无">无</option>
+											<option value="有">有</option>
+										</select>
+									</span>
+								</div>
+							</div>
+						</p>
+						<p class="mui-row shiceshuju" style="padding: 31px 0px 0px 0px ;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">外观判定:</label>
+									<span class="mui-badge1">
+										<select id="facadeCheck" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="ACCEPT">ACC</option>
+											<option value="REJECT">REJ</option>
+										</select>
+									</span>
+								</div>
+							</div>
+						</p>
+						<p class="mui-row shiceshuju" style="padding: 31px 0px 0px 0px ;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">最终判定:</label>
+									<span class="mui-badge1">
+										<select id="finalDecide" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="ACCEPT">ACC</option>
+											<option value="REJECT">REJ</option>
+										</select>
+									</span>
+								</div>
+							</div>
+						</p>
+
+						<p class="mui-row " style="padding: 23px 0px 0px 0px ;">
 							<span class="mui-col-xs-3">测量人:</span>
 							<span class="mui-col-xs-9"><input id="operator" type="text" value="" /></span>
 						</p>
@@ -179,6 +201,127 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				checkQty: document.getElementById("checkQty").value || '',
+				checkRequire: document.getElementById("checkRequire").value || '',
+				checkTolerance: document.getElementById("checkTolerance").value || '',
+				measureData: document.getElementById("measureData").value || '',
+				decide: document.getElementById("decide").value || '',
+				adhesionTest: document.getElementById("adhesionTest").value || '',
+				isPorePressure: document.getElementById("isPorePressure").value || '',
+				facadeCheck: document.getElementById("facadeCheck").value || '',
+				finalDecide: document.getElementById("finalDecide").value || '',
+				operator: document.getElementById("operator").value || '',
+
+			}
+			if (information.checkQty.length < 1 || information.checkRequire.length < 1 ||
+				information.checkTolerance.length < 1 || information.measureData.length < 1 ||
+				information.decide.length < 1 || information.adhesionTest.length < 1 ||
+				information.isPorePressure.length < 1 || information.facadeCheck.length < 1 ||
+				information.finalDecide.length < 1 || information.operator.length < 1) {
+				var color = "#F9F900";
+				if (information.checkQty.length < 1)
+					$("#checkQty").css("background-color", color);
+				if (information.checkRequire.length < 1)
+					$("#checkRequire").css("background-color", color);
+				if (information.checkTolerance.length < 1)
+					$("#checkTolerance").css("background-color", color);
+				if (information.measureData.length < 1)
+					$("#measureData").css("background-color", color);
+				if (information.decide.length < 1)
+					$("#decide").css("background-color", color);
+				if (information.adhesionTest.length < 1)
+					$("#adhesionTest").css("background-color", color);
+				if (information.isPorePressure.length < 1)
+					$("#isPorePressure").css("background-color", color);
+				if (information.finalDecide.length < 1)
+					$("#finalDecide").css("background-color", color);
+				if (information.facadeCheck.length < 1)
+					$("#facadeCheck").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+
+				var decide;
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+
+				factoryName = facarr[document.getElementById("factoryName").value];
+				// document.querySelectorAll("input[name='decide']").forEach(function(el){
+				// 	if(el.checked)
+				// 		decide = el.value;
+				// })
+				decide = document.getElementById("decide");
+				adhesionTest = document.getElementById("adhesionTest");
+				isPorePressure = document.getElementById("isPorePressure");
+				facadeCheck = document.getElementById("facadeCheck");
+				finalDecide = document.getElementById("finalDecide");
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					checkQty: document.getElementById("checkQty").value,
+					checkRequire: document.getElementById("checkRequire").value,
+					checkTolerance: document.getElementById("checkTolerance").value,
+					measureData: document.getElementById("measureData").value,
+
+					decide: decide.options[decide.selectedIndex].value,
+					adhesionTest: adhesionTest.options[adhesionTest.selectedIndex].value,
+					isPorePressure: isPorePressure.options[isPorePressure.selectedIndex].value,
+					facadeCheck: facadeCheck.options[facadeCheck.selectedIndex].value,
+					finalDecide: finalDecide.options[finalDecide.selectedIndex].value,
+
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=72',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -379,83 +522,7 @@
 				// 	el.addEventListener('change',cal)
 				// })
 
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
 
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-
-					var decide;
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-
-					factoryName = facarr[document.getElementById("factoryName").value];
-					// document.querySelectorAll("input[name='decide']").forEach(function(el){
-					// 	if(el.checked)
-					// 		decide = el.value;
-					// })
-					decide = document.getElementById("decide");
-					adhesionTest = document.getElementById("adhesionTest");
-					isPorePressure = document.getElementById("isPorePressure");
-					facadeCheck = document.getElementById("facadeCheck");
-					finalDecide = document.getElementById("finalDecide");
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						checkQty: document.getElementById("checkQty").value,
-						checkRequire: document.getElementById("checkRequire").value,
-						checkTolerance: document.getElementById("checkTolerance").value,
-						measureData: document.getElementById("measureData").value,
-
-						decide: decide.options[decide.selectedIndex].value,
-						adhesionTest: adhesionTest.options[adhesionTest.selectedIndex].value,
-						isPorePressure: isPorePressure.options[isPorePressure.selectedIndex].value,
-						facadeCheck: facadeCheck.options[facadeCheck.selectedIndex].value,
-						finalDecide: finalDecide.options[finalDecide.selectedIndex].value,
-
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=72',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
