--- a/pinzhi/shikehoukongjing.html
+++ b/pinzhi/shikehoukongjing.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -124,7 +125,7 @@
 						<p class="mui-row shiceshuju">
 							<span class="mui-col-xs-3">判定结果:</span>
 							<span class="mui-col-xs-9 hradio">
-								<label>ACC</label><input name="decide" value="ACCEPT" type="radio">
+								<label>ACC</label><input name="decide" value="ACCEPT" type="radio" checked="checked">
 								<label>REJ</label><input name="decide" value="REJECT" type="radio">
 							</span>
 						</p>
@@ -154,6 +155,120 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				prodQty: document.getElementById("prodQty").value || '',
+				checkQty: document.getElementById("checkQty").value || '',
+				rejectQty: document.getElementById("rejectQty").value || '',
+				rejectRatio: document.getElementById("rejectRatio").value || '',
+				requireHoleDia: document.getElementById("requireHoleDia").value || '',
+				//decide: decide,
+				holeTolerance: document.getElementById("holeTolerance").value || '',
+				requireHoleDiaRange: document.getElementById("requireHoleDiaRange").value || '',
+				measureHoleDia: document.getElementById("measureHoleDia").value || '',
+				operator: document.getElementById("operator").value || '',
+			}
+			if (information.prodQty.length < 1 || information.rejectQty.length < 1 ||
+				information.checkQty.length < 1 || information.rejectRatio.length < 1 ||
+				information.requireHoleDia.length < 1 || information.holeTolerance.length < 1 ||
+				information.requireHoleDiaRange.length < 1 || information.measureHoleDia.length < 1 ||
+				information.operator.length < 1) {
+				var color = "#F9F900";
+				if (information.prodQty.length < 1)
+					$("#prodQty").css("background-color", color);
+				if (information.rejectQty.length < 1)
+					$("#rejectQty").css("background-color", color);
+				if (information.checkQty.length < 1)
+					$("#checkQty").css("background-color", color);
+				if (information.requireHoleDia.length < 1)
+					$("#requireHoleDia").css("background-color", color);
+				if (information.rejectRatio.length < 1)
+					$("#rejectRatio").css("background-color", color);
+				if (information.holeTolerance.length < 1)
+					$("#holeTolerance").css("background-color", color);
+				if (information.requireHoleDiaRange.length < 1)
+					$("#requireHoleDiaRange").css("background-color", color);
+				if (information.measureHoleDia.length < 1)
+					$("#measureHoleDia").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+
+				var decide;
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+
+				factoryName = facarr[document.getElementById("factoryName").value];
+				document.querySelectorAll("input[name='decide']").forEach(function(el) {
+					if (el.checked)
+						decide = el.value;
+				})
+
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					prodQty: document.getElementById("prodQty").value,
+					checkQty: document.getElementById("checkQty").value,
+					rejectQty: document.getElementById("rejectQty").value,
+					rejectRatio: document.getElementById("rejectRatio").value,
+					requireHoleDia: document.getElementById("requireHoleDia").value,
+					decide: decide,
+
+					holeTolerance: document.getElementById("holeTolerance").value,
+					requireHoleDiaRange: document.getElementById("requireHoleDiaRange").value,
+					measureHoleDia: document.getElementById("measureHoleDia").value,
+
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=38',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -354,79 +469,6 @@
 				// 	el.addEventListener('change',cal)
 				// })
 
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-
-					var decide;
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						prodQty: document.getElementById("prodQty").value,
-						checkQty: document.getElementById("checkQty").value,
-						rejectQty: document.getElementById("rejectQty").value,
-						rejectRatio: document.getElementById("rejectRatio").value,
-						requireHoleDia: document.getElementById("requireHoleDia").value,
-						decide: decide,
-
-						holeTolerance: document.getElementById("holeTolerance").value,
-						requireHoleDiaRange: document.getElementById("requireHoleDiaRange").value,
-						measureHoleDia: document.getElementById("measureHoleDia").value,
-
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=38',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
