--- a/pinzhi/zuhanhoudu.html
+++ b/pinzhi/zuhanhoudu.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -132,7 +133,7 @@
 						<p class="mui-row shiceshuju">
 							<span class="mui-col-xs-3">判定结果:</span>
 							<span class="mui-col-xs-9 hradio">
-								<label>ACC</label><input name="decide" value="ACCEPT" type="radio">
+								<label>ACC</label><input name="decide" value="ACCEPT" type="radio" checked="checked">
 								<label>REJ</label><input name="decide" value="REJECT" type="radio">
 							</span>
 						</p>
@@ -161,6 +162,123 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				prodQty: document.getElementById("prodQty").value || '',
+				faceTime: document.getElementById("faceTime").value || '',
+				requiredSpec: document.getElementById("requiredSpec").value || '',
+				//decide: decide,
+				measureThicka: document.getElementById("measureThicka").value || '',
+				measureThickb: document.getElementById("measureThickb").value || '',
+				measureThickc: document.getElementById("measureThickc").value || '',
+				measureThickd: document.getElementById("measureThickd").value || '',
+				oilRequireThick: document.getElementById("oilRequireThick").value || '',
+				oilMeasure: document.getElementById("oilMeasure").value || '',
+				operator: document.getElementById("operator").value || '',
+			}
+			if (information.prodQty.length < 1 || information.faceTime.length < 1 ||
+				information.requiredSpec.length < 1 || information.measureThicka.length < 1 ||
+				information.measureThickb.length < 1 || information.measureThickc.length < 1 ||
+				information.measureThickd.length < 1 || information.oilRequireThick.length < 1 ||
+				information.oilMeasure.length < 1 || information.operator.length < 1) {
+				var color = "#F9F900";
+				if (information.prodQty.length < 1)
+					$("#prodQty").css("background-color", color);
+				if (information.faceTime.length < 1)
+					$("#faceTime").css("background-color", color);
+				if (information.measureThicka.length < 1)
+					$("#measureThicka").css("background-color", color);
+				if (information.requiredSpec.length < 1)
+					$("#requiredSpec").css("background-color", color);
+				if (information.measureThickb.length < 1)
+					$("#measureThickb").css("background-color", color);
+				if (information.measureThickc.length < 1)
+					$("#measureThickc").css("background-color", color);
+				if (information.measureThickd.length < 1)
+					$("#measureThickd").css("background-color", color);
+				if (information.oilRequireThick.length < 1)
+					$("#oilRequireThick").css("background-color", color);
+				if (information.oilMeasure.length < 1)
+					$("#oilMeasure").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+
+				var decide;
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+
+				factoryName = facarr[document.getElementById("factoryName").value];
+				document.querySelectorAll("input[name='decide']").forEach(function(el) {
+					if (el.checked)
+						decide = el.value;
+				})
+
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					prodQty: document.getElementById("prodQty").value,
+					faceTime: document.getElementById("faceTime").value,
+					requiredSpec: document.getElementById("requiredSpec").value,
+					decide: decide,
+					measureThicka: document.getElementById("measureThicka").value,
+					measureThickb: document.getElementById("measureThickb").value,
+					measureThickc: document.getElementById("measureThickc").value,
+					measureThickd: document.getElementById("measureThickd").value,
+					oilRequireThick: document.getElementById("oilRequireThick").value,
+					oilMeasure: document.getElementById("oilMeasure").value,
+
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=48',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -361,79 +479,7 @@
 				// 	el.addEventListener('change',cal)
 				// })
 
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
 
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-
-					var decide;
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						prodQty: document.getElementById("prodQty").value,
-						faceTime: document.getElementById("faceTime").value,
-						requiredSpec: document.getElementById("requiredSpec").value,
-						decide: decide,
-						measureThicka: document.getElementById("measureThicka").value,
-						measureThickb: document.getElementById("measureThickb").value,
-						measureThickc: document.getElementById("measureThickc").value,
-						measureThickd: document.getElementById("measureThickd").value,
-						oilRequireThick: document.getElementById("oilRequireThick").value,
-						oilMeasure: document.getElementById("oilMeasure").value,
-
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=48',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
