--- a/yahe/jianyan.html
+++ b/yahe/jianyan.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/app.js"></script>
 	</head>
@@ -101,7 +102,7 @@
 						<p class="mui-row shiceshuju">
 							<span class="mui-col-xs-3">判定结果:</span>
 							<span class="mui-col-xs-9 hradio">
-								<label>ACC</label><input name="decide" value="ACCEPT" type="radio">
+								<label>ACC</label><input name="decide" value="ACCEPT" type="radio" checked="checked">
 								<label>REJ</label><input name="decide" value="REJECT" type="radio">
 							</span>
 						</p>
@@ -147,6 +148,128 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				checkNum: document.getElementById("checkNum").value || '',
+				checkOutNum: document.getElementById("checkOutNum").value  || '',
+				requireSize: document.getElementById("requireSize").value  || '',
+				tolerance: document.getElementById("tolerance").value  || '',
+				measureSize: document.getElementById("measureSize").value  || '',
+				//decide: decide,
+				//rejectitem: rejectitem,
+				operator: document.getElementById("operator").value || '',
+			}
+			if (information.checkNum.length < 1 || information.checkOutNum.length < 1 ||
+				information.requireSize.length < 1 || information.tolerance.length < 1 ||
+				information.measureSize.length < 1 || information.operator.length < 1 ) {
+				var color = "#F9F900";
+				if (information.checkNum.length < 1)
+					$("#checkNum").css("background-color", color);
+				if (information.checkOutNum.length < 1)
+					$("#checkOutNum").css("background-color", color);
+				if (information.requireSize.length < 1)
+					$("#requireSize").css("background-color", color);
+				if (information.tolerance.length < 1)
+					$("#tolerance").css("background-color", color);
+				if (information.measureSize.length < 1)
+					$("#measureSize").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				$("inpu")
+			if (!confirm("确认提交吗？"))
+				return;
+		
+			if (document.getElementById("remark").value.length > 30) {
+				mui.alert("备注超过30字");
+				return;
+			}
+			var iscopper;
+			var speccut;
+			var decide;
+			var rejectitem = [];
+			var facarr = {
+				'一厂': 1,
+				'二厂': 2,
+				'三厂': 3,
+				'未知': 'N/A'
+			}
+			factoryName = facarr[document.getElementById("factoryName").value];
+			document.querySelectorAll("input[name='iscopper']").forEach(function(el) {
+				if (el.checked)
+					iscopper = el.value;
+			})
+			document.querySelectorAll("input[name='speccut']").forEach(function(el) {
+				if (el.checked)
+					speccut = el.value;
+			})
+			document.querySelectorAll("input[name='decide']").forEach(function(el) {
+				if (el.checked)
+					decide = el.value;
+			})
+			document.querySelectorAll("input[name='rejectitem']").forEach(function(el) {
+				if (el.checked)
+					rejectitem.push(el.value);
+			})
+			var data = {
+				factoryName: factoryName,
+				mo: document.getElementById("mo").value,
+				mfg: document.getElementById("mfg").value,
+				wo: document.getElementById("wo").value,
+				custcode: document.getElementById("custcode").value,
+				custpart: document.getElementById("custpart").value,
+				lot: document.getElementById("lot").value,
+				datecode: document.getElementById("datecode").value,
+				d06rkey: document.getElementById("d06rkey").value,
+		
+				checkNum: document.getElementById("checkNum").value,
+				checkOutNum: document.getElementById("checkOutNum").value,
+				requireSize: document.getElementById("requireSize").value,
+				tolerance: document.getElementById("tolerance").value,
+				measureSize: document.getElementById("measureSize").value,
+		
+				decide: decide,
+				rejectitem: rejectitem,
+				operator: document.getElementById("operator").value,
+				auditor: document.getElementById("auditor").value,
+				remark: document.getElementById("remark").value,
+			}
+		
+			// for(var key in data){
+			// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
+			// 		mui.alert("必填项不能为空");
+			// 		return;
+			// 	}
+			// }
+		
+			var params = JSON.stringify(data);
+			mui.ajax({
+				url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=12',
+				type: "post",
+				data: {
+					params: params,
+					isRejectItem: true,
+					rejectItem: rejectitem.toString()
+				},
+				dataType: "json",
+				async: false,
+				error: function() {
+					mui.alert("error occur!");
+				},
+				success: function(data) {
+					if (data.isOK) {
+						mui.alert("上传成功!");
+					} else {
+						mui.alert("未知错误。");
+					}
+				}
+			});
+			}
+		});
+		
 		(function($, doc) {
 			//初始化 scan页
 			$.init({
@@ -291,97 +414,6 @@
 				var state = app.getState();
 				document.getElementById("factoryName").value = state.changbie;
 				document.getElementById("operator").value = state.username;
-
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-					var iscopper;
-					var speccut;
-					var decide;
-					var rejectitem = [];
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-					factoryName = facarr[document.getElementById("factoryName").value];
-					document.querySelectorAll("input[name='iscopper']").forEach(function(el) {
-						if (el.checked)
-							iscopper = el.value;
-					})
-					document.querySelectorAll("input[name='speccut']").forEach(function(el) {
-						if (el.checked)
-							speccut = el.value;
-					})
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-					document.querySelectorAll("input[name='rejectitem']").forEach(function(el) {
-						if (el.checked)
-							rejectitem.push(el.value);
-					})
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						checkNum: document.getElementById("checkNum").value,
-						checkOutNum: document.getElementById("checkOutNum").value,
-						requireSize: document.getElementById("requireSize").value,
-						tolerance: document.getElementById("tolerance").value,
-						measureSize: document.getElementById("measureSize").value,
-
-						decide: decide,
-						rejectitem: rejectitem,
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					// for(var key in data){
-					// 	if(data[key] == undefined || data[key] == null || data[key] == ''){
-					// 		mui.alert("必填项不能为空");
-					// 		return;
-					// 	}
-					// }
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=12',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: true,
-							rejectItem: rejectitem.toString()
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
