--- a/yahe/qiepian.html
+++ b/yahe/qiepian.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -88,33 +89,37 @@
 					<a class="mui-navigate-right" href="#">实测数据</a>
 					<div class="mui-collapse-content">
 						<p style="padding: 1rem;">实测铜箔厚度(um)</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">层数:</span>
-							<span class="mui-col-xs-9">
-								<select id="copperThickPlies">
-									<option value="" selected="selected">请选择</option>
-									<option value="L1">L1</option>
-									<option value="L2">L2</option>
-									<option value="L3">L3</option>
-									<option value="L4">L4</option>
-									<option value="L5">L5</option>
-									<option value="L6">L6</option>
-									<option value="L7">L7</option>
-									<option value="L8">L8</option>
-									<option value="L9">L9</option>
-									<option value="L10">L10</option>
-									<option value="L11">L11</option>
-									<option value="L12">L12</option>
-									<option value="L13">L13</option>
-									<option value="L14">L14</option>
-									<option value="L15">L15</option>
-									<option value="L16">L16</option>
-									<option value="L17">L17</option>
-									<option value="L18">L18</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 8px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">层数:</label>
+									<span class="mui-badge1">
+										<select id="copperThickPlies" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="L1">L1</option>
+											<option value="L2">L2</option>
+											<option value="L3">L3</option>
+											<option value="L4">L4</option>
+											<option value="L5">L5</option>
+											<option value="L6">L6</option>
+											<option value="L7">L7</option>
+											<option value="L8">L8</option>
+											<option value="L9">L9</option>
+											<option value="L10">L10</option>
+											<option value="L11">L11</option>
+											<option value="L12">L12</option>
+											<option value="L13">L13</option>
+											<option value="L14">L14</option>
+											<option value="L15">L15</option>
+											<option value="L16">L16</option>
+											<option value="L17">L17</option>
+											<option value="L18">L18</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row shiceshuju">
+						<p class="mui-row shiceshuju" style="padding: 23px 0px 0px 0px;">
 							<span class="mui-col-xs-3">要求:</span>
 							<span class="mui-col-xs-9"><input id="copperThickRequire" type="text" value="" /></span>
 						</p>
@@ -123,32 +128,36 @@
 							<span class="mui-col-xs-9"><input id="copperThickMeasure" type="text" value="" /></span>
 						</p>
 						<p style="padding: 1rem;">实测半固化片厚度(mm)</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">层数:</span>
-							<span class="mui-col-xs-9">
-								<select id="prepregThickPlies">
-									<option value="" selected="selected">请选择</option>
-									<option value="L1-L2">L1-L2</option>
-									<option value="L2-L3">L2-L3</option>
-									<option value="L3-L4">L3-L4</option>
-									<option value="L4-L5">L4-L5</option>
-									<option value="L5-L6">L5-L6</option>
-									<option value="L6-L7">L6-L7</option>
-									<option value="L7-L8">L7-L8</option>
-									<option value="L8-L9">L8-L9</option>
-									<option value="L9-L10">L9-L10</option>
-									<option value="L10-L1">L10-L11</option>
-									<option value="L11-L12">L11-L12</option>
-									<option value="L12-L13">L12-L13</option>
-									<option value="L13-L14">L13-L14</option>
-									<option value="L14-L15">L14-L15</option>
-									<option value="L15-L16">L15-L16</option>
-									<option value="L16-L17">L16-L17</option>
-									<option value="L17-L18">L17-L18</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 8px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">层数:</label>
+									<span class="mui-badge1">
+										<select id="prepregThickPlies" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="L1-L2">L1-L2</option>
+											<option value="L2-L3">L2-L3</option>
+											<option value="L3-L4">L3-L4</option>
+											<option value="L4-L5">L4-L5</option>
+											<option value="L5-L6">L5-L6</option>
+											<option value="L6-L7">L6-L7</option>
+											<option value="L7-L8">L7-L8</option>
+											<option value="L8-L9">L8-L9</option>
+											<option value="L9-L10">L9-L10</option>
+											<option value="L10-L1">L10-L11</option>
+											<option value="L11-L12">L11-L12</option>
+											<option value="L12-L13">L12-L13</option>
+											<option value="L13-L14">L13-L14</option>
+											<option value="L14-L15">L14-L15</option>
+											<option value="L15-L16">L15-L16</option>
+											<option value="L16-L17">L16-L17</option>
+											<option value="L17-L18">L17-L18</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row shiceshuju">
+						<p class="mui-row shiceshuju" style="padding: 23px 0px 0px 0px;">
 							<span class="mui-col-xs-3">要求:</span>
 							<span class="mui-col-xs-9"><input id="prepregThickRequire" type="text" value="" /></span>
 						</p>
@@ -160,20 +169,24 @@
 							<span class="mui-col-xs-3">实际PP叠构:</span>
 							<span class="mui-col-xs-9"><input id="ppStackup" type="text" value="" /></span>
 						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">与要求相符:</span>
-							<span class="mui-col-xs-9">
-								<select id="isEligibility">
-									<option value="" selected="selected">请选择</option>
-									<option value="Y">是</option>
-									<option value="N">否</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 8px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">与要求相符:</label>
+									<span class="mui-badge1">
+										<select id="isEligibility" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="Y">是</option>
+											<option value="N">否</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row shiceshuju">
+						<p class="mui-row shiceshuju" style="padding: 23px 0px 0px 0px;">
 							<span class="mui-col-xs-3">判定结果:</span>
 							<span class="mui-col-xs-9 hradio">
-								<label>ACC</label><input name="decide" value="ACCEPT" type="radio">
+								<label>ACC</label><input name="decide" value="ACCEPT" type="radio" checked="checked">
 								<label>REJ</label><input name="decide" value="REJECT" type="radio">
 							</span>
 						</p>
@@ -202,6 +215,121 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				copperThickPlies: copperThickPlies.options[copperThickPlies.selectedIndex].value || '',
+				prepregThickPlies: prepregThickPlies.options[prepregThickPlies.selectedIndex].value || '',
+				isEligibility: isEligibility.options[isEligibility.selectedIndex].value || '',
+				copperThickRequire: document.getElementById("copperThickRequire").value || '',
+				copperThickMeasure: document.getElementById("copperThickMeasure").value || '',
+				prepregThickRequire: document.getElementById("prepregThickRequire").value || '',
+				prepregThickMeasure: document.getElementById("prepregThickMeasure").value || '',
+				ppStackup: document.getElementById("ppStackup").value || '',
+				//decide: decide,
+				operator: document.getElementById("operator").value || '',
+			}
+			if (information.copperThickPlies.length < 1 || information.prepregThickPlies.length < 1 ||
+				information.isEligibility.length < 1 || information.copperThickRequire.length < 1 ||
+				information.copperThickMeasure.length < 1 || information.prepregThickRequire.length < 1 ||
+				information.prepregThickMeasure.length < 1 || information.ppStackup.length < 1 ||
+				information.operator.length < 1) {
+				var color = "#F9F900";
+				if (information.copperThickPlies.length < 1)
+					$("#copperThickPlies").css("background-color", color);
+				if (information.prepregThickPlies.length < 1)
+					$("#prepregThickPlies").css("background-color", color);
+				if (information.isEligibility.length < 1)
+					$("#isEligibility").css("background-color", color);
+				if (information.copperThickRequire.length < 1)
+					$("#copperThickRequire").css("background-color", color);
+				if (information.copperThickMeasure.length < 1)
+					$("#copperThickMeasure").css("background-color", color);
+				if (information.prepregThickRequire.length < 1)
+					$("#prepregThickRequire").css("background-color", color);
+				if (information.prepregThickMeasure.length < 1)
+					$("#prepregThickMeasure").css("background-color", color);
+				if (information.ppStackup.length < 1)
+					$("#ppStackup").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+				var decide;
+				document.querySelectorAll("input[name='decide']").forEach(function(el) {
+					if (el.checked)
+						decide = el.value;
+				})
+
+				copperThickPlies = document.getElementById("copperThickPlies");
+				prepregThickPlies = document.getElementById("prepregThickPlies");
+				isEligibility = document.getElementById("isEligibility");
+				factoryName = facarr[document.getElementById("factoryName").value];
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					copperThickPlies: copperThickPlies.options[copperThickPlies.selectedIndex].value,
+					prepregThickPlies: prepregThickPlies.options[prepregThickPlies.selectedIndex].value,
+					isEligibility: isEligibility.options[isEligibility.selectedIndex].value,
+
+					copperThickRequire: document.getElementById("copperThickRequire").value,
+					copperThickMeasure: document.getElementById("copperThickMeasure").value,
+					prepregThickRequire: document.getElementById("prepregThickRequire").value,
+					prepregThickMeasure: document.getElementById("prepregThickMeasure").value,
+					ppStackup: document.getElementById("ppStackup").value,
+					decide: decide,
+
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=74',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false,
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -370,81 +498,6 @@
 				// }
 				// document.getElementById("inputTime").addEventListener('tap',pickerf);
 				// document.getElementById("outputTime").addEventListener('tap',pickerf);
-
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-					var decide;
-					document.querySelectorAll("input[name='decide']").forEach(function(el) {
-						if (el.checked)
-							decide = el.value;
-					})
-
-					copperThickPlies = document.getElementById("copperThickPlies");
-					prepregThickPlies = document.getElementById("prepregThickPlies");
-					isEligibility = document.getElementById("isEligibility");
-					factoryName = facarr[document.getElementById("factoryName").value];
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						copperThickPlies: copperThickPlies.options[copperThickPlies.selectedIndex].value,
-						prepregThickPlies: prepregThickPlies.options[prepregThickPlies.selectedIndex].value,
-						isEligibility: isEligibility.options[isEligibility.selectedIndex].value,
-
-						copperThickRequire: document.getElementById("copperThickRequire").value,
-						copperThickMeasure: document.getElementById("copperThickMeasure").value,
-						prepregThickRequire: document.getElementById("prepregThickRequire").value,
-						prepregThickMeasure: document.getElementById("prepregThickMeasure").value,
-						ppStackup: document.getElementById("ppStackup").value,
-						decide: decide,
-
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=74',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false,
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
