--- a/zuankong/shoujian.html
+++ b/zuankong/shoujian.html
@@ -8,6 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/biaodan.css" />
 		<link rel="stylesheet" type="text/css" href="../css/mui.picker.min.css" />
+		<script type="text/javascript" src="../js/jquery-3.4.1.js"></script>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.picker.min.js"></script>
 		<script src="../js/app.js"></script>
@@ -107,17 +108,21 @@
 							<span class="mui-col-xs-3">实测:</span>
 							<span class="mui-col-xs-9"><input id="measureData" type="text" value="" /></span>
 						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">判定:</span>
-							<span class="mui-col-xs-9">
-								<select id="decide">
-									<option value="" selected="selected">请选择</option>
-									<option value="ACCEPT">ACC</option>
-									<option value="REJECT">REJ</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 8px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">判定:</label>
+									<span class="mui-badge1">
+										<select id="decide" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="ACCEPT">ACC</option>
+											<option value="REJECT">REJ</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row shiceshuju">
+						<p class="mui-row shiceshuju" style="padding: 23px 0px 0px 0px;">
 							<span class="mui-col-xs-3">涨缩系数:</span>
 							<span class="mui-col-xs-9"><input id="higherShrinkageCoefficient" type="text" value="" /></span>
 						</p>
@@ -126,37 +131,49 @@
 							<span class="mui-col-xs-9"><input id="interlaminarAlignment" type="text" value="" /></span>
 						</p>
 
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">有无压接孔:</span>
-							<span class="mui-col-xs-9">
-								<select id="isHole">
-									<option value="" selected="selected">请选择</option>
-									<option value="Y">有</option>
-									<option value="N">无</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 8px 0px 0px 0px;">
+							<div class="mui-input-group ">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">有无压接孔:</label>
+									<span class="mui-badge1">
+										<select id="isHole" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="Y">有</option>
+											<option value="N">无</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">外观判定:</span>
-							<span class="mui-col-xs-9">
-								<select id="facadeDecide">
-									<option value="" selected="selected">请选择</option>
-									<option value="ACCEPT">ACC</option>
-									<option value="REJECT">REJ</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 31px 0px 0px 0px;">
+							<div class="mui-input-group">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">外观判定:</label>
+									<span class="mui-badge1" >
+										<select id="facadeDecide" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="ACCEPT">ACC</option>
+											<option value="REJECT">REJ</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row shiceshuju">
-							<span class="mui-col-xs-3">最终判定:</span>
-							<span class="mui-col-xs-9">
-								<select id="finalDecide">
-									<option value="" selected="selected">请选择</option>
-									<option value="ACCEPT">ACC</option>
-									<option value="REJECT">REJ</option>
-								</select>
-							</span>
+						<p class="mui-row shiceshuju" style="padding: 31px 0px 0px 0px;">
+							<div class="mui-input-group bground">
+								<div class="mui-input-row" style="height: 43px;">
+									<label class="mui-badge1">最终判定:</label>
+									<span class="mui-badge1">
+										<select id="finalDecide" class="bground" style="margin: auto;color: #8F8F94;font-size: 14px;">
+											<option value="" selected="selected">请选择</option>
+											<option value="ACCEPT">ACC</option>
+											<option value="REJECT">REJ</option>
+										</select>
+									</span>
+								</div>
+							</div>
 						</p>
-						<p class="mui-row ">
+						<p class="mui-row " style="padding: 23px 0px 0px 0px;">
 							<span class="mui-col-xs-3">检验员:</span>
 							<span class="mui-col-xs-9"><input id="operator" type="text" value="" /></span>
 						</p>
@@ -181,6 +198,134 @@
 	</body>
 
 	<script type="text/javascript">
+		// 表单
+		document.getElementById("submit").addEventListener('tap', function() {
+			var information = {
+				machineNo: document.getElementById("machineNo").value || '',
+				checkQty: document.getElementById("checkQty").value || '',
+				checkRequire: document.getElementById("checkRequire").value || '',
+				checkTolerance: document.getElementById("checkTolerance").value || '',
+				measurea: document.getElementById("measureData").value || '',
+				higherShrinkageCoefficient: document.getElementById("higherShrinkageCoefficient").value || '',
+				interlaminarAlignment: document.getElementById("interlaminarAlignment").value || '',
+				decide: document.getElementById("decide").value || '',
+				isHole: document.getElementById("isHole").value || '',
+				facadeDecide: document.getElementById("facadeDecide").value || '',
+				finalDecide: document.getElementById("finalDecide").value || '',
+				operator: document.getElementById("operator").value || '',
+			}
+			if (information.machineNo.length < 1 || information.checkRequire.length < 1 ||
+				information.checkQty.length < 1 || information.checkTolerance.length < 1 ||
+				information.measurea.length < 1 || information.higherShrinkageCoefficient.length < 1 ||
+				information.interlaminarAlignment.length < 1 || information.decide.length < 1 ||
+				information.isHole.length < 1 || information.facadeDecide.length < 1 ||
+				information.finalDecide.length < 1 || information.operator.length < 1) {
+				var color = "#F9F900";
+				if (information.machineNo.length < 1)
+					$("#machineNo").css("background-color", color);
+				if (information.checkRequire.length < 1)
+					$("#checkRequire").css("background-color", color);
+				if (information.checkQty.length < 1)
+					$("#checkQty").css("background-color", color);
+				if (information.checkTolerance.length < 1)
+					$("#checkTolerance").css("background-color", color);
+				if (information.measurea.length < 1)
+					$("#measureData").css("background-color", color);
+				if (information.higherShrinkageCoefficient.length < 1)
+					$("#higherShrinkageCoefficient").css("background-color", color);
+				if (information.interlaminarAlignment.length < 1)
+					$("#interlaminarAlignment").css("background-color", color);
+				if (information.decide.length < 1)
+					$("#decide").css("background-color", color);
+				if (information.isHole.length < 1)
+					$("#isHole").css("background-color", color);
+				if (information.facadeDecide.length < 1)
+					$("#facadeDecide").css("background-color", color);
+				if (information.finalDecide.length < 1)
+					$("#finalDecide").css("background-color", color);
+				if (information.operator.length < 1)
+					$("#operator").css("background-color", color);
+				plus.nativeUI.toast("黄色区域为必填项！");
+				return;
+			} else {
+				if (!confirm("确认提交吗？"))
+					return;
+
+				if (document.getElementById("remark").value.length > 30) {
+					mui.alert("备注超过30字");
+					return;
+				}
+
+				var decide;
+				var facarr = {
+					'一厂': 1,
+					'二厂': 2,
+					'三厂': 3,
+					'未知': 'N/A'
+				}
+
+				factoryName = facarr[document.getElementById("factoryName").value];
+				// document.querySelectorAll("input[name='decide']").forEach(function(el){
+				// 	if(el.checked)
+				// 		decide = el.value;
+				// })
+				decide = document.getElementById("decide");
+				isHole = document.getElementById("isHole");
+				facadeDecide = document.getElementById("facadeDecide");
+				finalDecide = document.getElementById("finalDecide");
+				var data = {
+					factoryName: factoryName,
+					mo: document.getElementById("mo").value,
+					mfg: document.getElementById("mfg").value,
+					wo: document.getElementById("wo").value,
+					custcode: document.getElementById("custcode").value,
+					custpart: document.getElementById("custpart").value,
+					lot: document.getElementById("lot").value,
+					datecode: document.getElementById("datecode").value,
+					d06rkey: document.getElementById("d06rkey").value,
+
+					machineNo: document.getElementById("machineNo").value,
+					checkQty: document.getElementById("checkQty").value,
+					checkRequire: document.getElementById("checkRequire").value,
+					checkTolerance: document.getElementById("checkTolerance").value,
+					measurea: document.getElementById("measureData").value,
+					higherShrinkageCoefficient: document.getElementById("higherShrinkageCoefficient").value,
+					interlaminarAlignment: document.getElementById("interlaminarAlignment").value,
+
+					decide: decide.options[decide.selectedIndex].value,
+					isHole: isHole.options[isHole.selectedIndex].value,
+					facadeDecide: facadeDecide.options[facadeDecide.selectedIndex].value,
+					finalDecide: finalDecide.options[finalDecide.selectedIndex].value,
+
+					operator: document.getElementById("operator").value,
+					auditor: document.getElementById("auditor").value,
+					remark: document.getElementById("remark").value,
+				}
+
+				var params = JSON.stringify(data);
+				mui.ajax({
+					url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=77',
+					type: "post",
+					data: {
+						params: params,
+						isRejectItem: false
+					},
+					dataType: "json",
+					async: false,
+					error: function() {
+						mui.alert("error occur!");
+					},
+					success: function(data) {
+						if (data.isOK) {
+							mui.alert("上传成功!");
+						} else {
+							mui.alert("未知错误。");
+						}
+					}
+				});
+			}
+		});
+
 		function pad(num, n) {
 			var len = num.toString().length;
 			while (len < n) {
@@ -220,7 +365,7 @@
 							document.getElementById("lot").value = data.app.lot;
 							document.getElementById("datecode").value = data.app.datecode;
 							document.getElementById("d06rkey").value = data.app.d06rkey;
-					
+
 							// document.getElementById("plateThick").value = data.app.platethickness;
 						} else {
 							mui.alert(data.mess);
@@ -230,7 +375,7 @@
 						//异常处理
 						if (type == "timeout")
 							$.toast('连接超时，请检查网络')
-					
+
 						$.toast('系统异常，请检查是否连接jove-wifi')
 					}
 				})
@@ -381,84 +526,6 @@
 				// 	el.addEventListener('change',cal)
 				// })
 
-				// 表单
-				document.getElementById("submit").addEventListener('tap', function() {
-					if (!confirm("确认提交吗？"))
-						return;
-
-					if (document.getElementById("remark").value.length > 30) {
-						mui.alert("备注超过30字");
-						return;
-					}
-
-					var decide;
-					var facarr = {
-						'一厂': 1,
-						'二厂': 2,
-						'三厂': 3,
-						'未知': 'N/A'
-					}
-
-					factoryName = facarr[document.getElementById("factoryName").value];
-					// document.querySelectorAll("input[name='decide']").forEach(function(el){
-					// 	if(el.checked)
-					// 		decide = el.value;
-					// })
-					decide = document.getElementById("decide");
-					isHole = document.getElementById("isHole");
-					facadeDecide = document.getElementById("facadeDecide");
-					finalDecide = document.getElementById("finalDecide");
-					var data = {
-						factoryName: factoryName,
-						mo: document.getElementById("mo").value,
-						mfg: document.getElementById("mfg").value,
-						wo: document.getElementById("wo").value,
-						custcode: document.getElementById("custcode").value,
-						custpart: document.getElementById("custpart").value,
-						lot: document.getElementById("lot").value,
-						datecode: document.getElementById("datecode").value,
-						d06rkey: document.getElementById("d06rkey").value,
-
-						machineNo: document.getElementById("machineNo").value,
-						checkQty: document.getElementById("checkQty").value,
-						checkRequire: document.getElementById("checkRequire").value,
-						checkTolerance: document.getElementById("checkTolerance").value,
-						measurea: document.getElementById("measureData").value,
-						higherShrinkageCoefficient: document.getElementById("higherShrinkageCoefficient").value,
-						interlaminarAlignment: document.getElementById("interlaminarAlignment").value,
-
-						decide: decide.options[decide.selectedIndex].value,
-						isHole: isHole.options[isHole.selectedIndex].value,
-						facadeDecide: facadeDecide.options[facadeDecide.selectedIndex].value,
-						finalDecide: finalDecide.options[finalDecide.selectedIndex].value,
-
-						operator: document.getElementById("operator").value,
-						auditor: document.getElementById("auditor").value,
-						remark: document.getElementById("remark").value,
-					}
-
-					var params = JSON.stringify(data);
-					mui.ajax({
-						url: realapi + '/JOVE_QIS/query/saveVerifyData.action?id=77',
-						type: "post",
-						data: {
-							params: params,
-							isRejectItem: false
-						},
-						dataType: "json",
-						async: false,
-						error: function() {
-							mui.alert("error occur!");
-						},
-						success: function(data) {
-							if (data.isOK) {
-								mui.alert("上传成功!");
-							} else {
-								mui.alert("未知错误。");
-							}
-						}
-					});
-				});
 
 				document.getElementById("reset").addEventListener('tap', function() {
 					if (!confirm("确认重置吗？"))
